[package]
name = "lum_service"
version = "0.1.0"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "lum framework's service library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_service"
license = "MIT"
keywords = ["lum", "framework", "service"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_boxtypes = "0.1.1"
lum_event = "0.1.4"
lum_libs = "0.1.5"
lum_log = "0.1.4"
thiserror = "2.0.10"
