[package]
name = "lum_service"
version = "0.2.0"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "lum framework's service library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_service"
license = "MIT"
keywords = ["lum", "framework", "service"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_boxtypes = "0.2.0"
lum_event = "0.2.2"
lum_libs = { version = "0.2.4", features = ["async-trait", "downcast-rs", "fern", "humantime", "log", "serde", "tokio", "uuid"] }
lum_log = "0.2.3"
thiserror = "2.0.12"
